cpp/test/FreezeScript/dbmap/fail/06_old.ice
module Test
{

enum E { E1, E2, E3 };

struct S1
{
    float m1;
    long m2;
    string m3;
    E m4;
};

sequence<float> Seq1;
dictionary<byte, float> D1;

interface I {};

class C1 implements I
{
    float c1m1;
    float c1m2;
    float c1m3;
    float c1m4;
    float c1m5;
    float c1m6;
    float c1m7;
    float c1m8;
    float c1m9;
    float c1m10;
    float c1m11;
    float c1m12;
    float c1m13;
    float c1m14;
    float c1m15;
    float c1m16;
};

class C2 extends C1
{
    float c2m1;
    float c2m2;
    float c2m3;
    float c2m4;
    float c2m5;
    float c2m6;
    float c2m7;
    float c2m8;
    float c2m9;
    float c2m10;
    float c2m11;
    float c2m12;
    float c2m13;
    float c2m14;
    float c2m15;
    float c2m16;
};

struct S2
{
    float m1;
    float m2;
    float m3;
    float m4;
    float m5;
    float m6;
    float m7;
    float m8;
    float m9;
    float m10;
    float m11;
    float m12;
    float m13;
    float m14;
    float m15;
    float m16;
};

};
